# fasta_filter

./: .gitignore  Cargo.toml  Changelog.md  README.md  cargo_build.sh
data/: BA1_BA2_pos.txt  small.fasta  small.fasta.xz  test_output.fasta
python/: sequence_cleaner.py
src/: filter.rs  io.rs  lib.rs  main.rs  reader.rs
