[package]
name = "fasta_filter"
description = "A tool for filtering fasta sequences with threshold of specific bases (e.g. 'N'), written in Rust."
repository = "https://github.com/Koohoko/fasta_filter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["cargo", "derive"] }
needletail = "0.4"